Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame.from_dict(data['meta'])"
+    "pd.DataFrame.from_dict(data['meta'])a"
    ]
   },
   {
