Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,6 +135,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "im"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,7 +168,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame.from_dict(data['meta'])a"
+    "pd.DataFrame.from_dict(data['meta'])"
    ]
   },
   {
