--- a/index.ipynb
+++ b/index.ipynb
@@ -152,19 +152,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-37582aca8eae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'meta'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>view</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>attribution</td>\n",
+       "      <td>Campaign Finance Board (CFB)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>averageRating</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>category</td>\n",
+       "      <td>City Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>columns</td>\n",
+       "      <td>[{'id': -1, 'name': 'sid', 'dataTypeName': 'me...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>createdAt</td>\n",
+       "      <td>1315950830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>description</td>\n",
+       "      <td>A listing of public funds payments for candida...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>displayType</td>\n",
+       "      <td>table</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>downloadCount</td>\n",
+       "      <td>1470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>flags</td>\n",
+       "      <td>[default, restorable, restorePossibleForType]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>grants</td>\n",
+       "      <td>[{'inherited': False, 'type': 'viewer', 'flags...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>hideFromCatalog</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>hideFromDataJson</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>id</td>\n",
+       "      <td>8dhd-zvi6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>indexUpdatedAt</td>\n",
+       "      <td>1536596254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>metadata</td>\n",
+       "      <td>{'rdfSubject': '0', 'rdfClass': '', 'attachmen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>name</td>\n",
+       "      <td>2001 Campaign Payments</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>newBackend</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>numberOfComments</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>oid</td>\n",
+       "      <td>4140996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>owner</td>\n",
+       "      <td>{'id': '5fuc-pqz2', 'displayName': 'NYC OpenDa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>provenance</td>\n",
+       "      <td>official</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>publicationAppendEnabled</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>publicationDate</td>\n",
+       "      <td>1371845179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>publicationGroup</td>\n",
+       "      <td>240370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>publicationStage</td>\n",
+       "      <td>published</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>query</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>rights</td>\n",
+       "      <td>[read]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>rowClass</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>rowsUpdatedAt</td>\n",
+       "      <td>1371845177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>rowsUpdatedBy</td>\n",
+       "      <td>5fuc-pqz2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>tableAuthor</td>\n",
+       "      <td>{'id': '5fuc-pqz2', 'displayName': 'NYC OpenDa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>tableId</td>\n",
+       "      <td>932968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>tags</td>\n",
+       "      <td>[finance, campaign finance board, cfb, nyccfb,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>totalTimesRated</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>viewCount</td>\n",
+       "      <td>233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>viewLastModified</td>\n",
+       "      <td>1536605717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>viewType</td>\n",
+       "      <td>tabular</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                       view\n",
+       "attribution                                    Campaign Finance Board (CFB)\n",
+       "averageRating                                                             0\n",
+       "category                                                    City Government\n",
+       "columns                   [{'id': -1, 'name': 'sid', 'dataTypeName': 'me...\n",
+       "createdAt                                                        1315950830\n",
+       "description               A listing of public funds payments for candida...\n",
+       "displayType                                                           table\n",
+       "downloadCount                                                          1470\n",
+       "flags                         [default, restorable, restorePossibleForType]\n",
+       "grants                    [{'inherited': False, 'type': 'viewer', 'flags...\n",
+       "hideFromCatalog                                                       False\n",
+       "hideFromDataJson                                                      False\n",
+       "id                                                                8dhd-zvi6\n",
+       "indexUpdatedAt                                                   1536596254\n",
+       "metadata                  {'rdfSubject': '0', 'rdfClass': '', 'attachmen...\n",
+       "name                                                 2001 Campaign Payments\n",
+       "newBackend                                                            False\n",
+       "numberOfComments                                                          0\n",
+       "oid                                                                 4140996\n",
+       "owner                     {'id': '5fuc-pqz2', 'displayName': 'NYC OpenDa...\n",
+       "provenance                                                         official\n",
+       "publicationAppendEnabled                                              False\n",
+       "publicationDate                                                  1371845179\n",
+       "publicationGroup                                                     240370\n",
+       "publicationStage                                                  published\n",
+       "query                                                                    {}\n",
+       "rights                                                               [read]\n",
+       "rowClass                                                                   \n",
+       "rowsUpdatedAt                                                    1371845177\n",
+       "rowsUpdatedBy                                                     5fuc-pqz2\n",
+       "tableAuthor               {'id': '5fuc-pqz2', 'displayName': 'NYC OpenDa...\n",
+       "tableId                                                              932968\n",
+       "tags                      [finance, campaign finance board, cfb, nyccfb,...\n",
+       "totalTimesRated                                                           0\n",
+       "viewCount                                                               233\n",
+       "viewLastModified                                                 1536605717\n",
+       "viewType                                                            tabular"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
